fixed some word-wrap issues

--- a/components/cards/post_card/PostCard.module.css
+++ b/components/cards/post_card/PostCard.module.css
@@ -2,14 +2,18 @@
   display: flex;
   flex-direction: column;
   min-height: 25vh;
-  padding: 2em;
-  gap: 0.7rem;
-  /* border-radius: 16px; */
+  padding: 1.3rem;
+  gap: 0.5rem;
   background: var(--card-bg);
   border-bottom: var(--default-border);
   cursor: pointer;
 }
-
+@media (min-width: 400px) {
+  .card {
+    padding: 2em;
+    gap: 0.7rem;
+  }
+}
 .card:last-of-type {
   border-bottom: none;
 }
@@ -58,33 +62,10 @@
   margin-left: 0.5rem;
 }
 
-.author {
-  pointer-events: auto;
-}
 
 .author:hover,
 .author:active {
   text-decoration: underline;
-}
-
-.readmore {
-  background-color: inherit;
-  font-size: small;
-  cursor: pointer;
-  pointer-events: auto;
-  align-self: flex-end;
-  margin-top: auto;
-  width: fit-content;
-  border-radius: 8px;
-  border: var(--default-border);
-  padding: 0.5rem 0.5rem;
-}
-
-.readmore:hover,
-.readmore:active {
-  background-color: var(--fo-clr);
-  color: var(--bg-clr-light);
-  font-weight: bold;
 }
 
 .tags-wrapper {
