--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -3,13 +3,11 @@
   color: var(--fo-clr);
 }
 
-
 @media (min-width: 1080px) {
   .profile-container {
     flex-direction: row;
   }
 }
-
 
 .profile {
   flex: 2;
@@ -67,7 +65,6 @@
   object-fit: cover;
 }
 
-
 .profile-description {
   display: flex;
   width: 100%;
@@ -113,10 +110,10 @@
   text-transform: capitalize;
 }
 .social-link a {
+  word-break: normal;
   display: inline;
   width: min-content;
   font-size: 13px;
-
 }
 
 .phone,
